changed the html mark up a little bit to make the sign look better

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1 class="neon-sign" data-text="Nicholas Gervais">Nicholas Gervais</h1>
+        <header>
+            <div class="pink-screen"></div>
+            <div class="sign">
+                <h1 class="neon-sign" data-text="Nicholas">Nicholas</h1>
+                <span class="divider"></span>
+                <h1 class="neon-sign" data-text="Gervais">Gervais</h1>            
+            </div>
+        </header>
     </body>
 </html>
