--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <header>
-            <div class="pink-screen"></div>
+            <div class="background"></div>
+            <div class="pink-screen"></div> 
             <div class="sign">
                 <h1 class="neon-sign" data-text="Nicholas">Nicholas</h1>
                 <h1 class="neon-sign" data-text="Gervais">Gervais</h1>            
