changed the words in the neon sign

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
             <div class="background"></div>
             <div class="pink-screen"></div> 
             <div class="sign">
-                <h1 class="neon-sign" data-text="Nicholas">Nicholas</h1>
-                <h1 class="neon-sign" data-text="Gervais">Gervais</h1>            
+                <h1 class="neon-sign" data-text="Learn">Learn</h1>
+                <h1 class="neon-sign" data-text="Adventure">Adventure</h1>            
+                <h1 class="neon-sign" data-text="Create">Create</h1>
             </div>
         </header>
     </body>
